fix: description overflow

--- a/webapp/src/components/PollDetailPage/PollDetailPage.css
+++ b/webapp/src/components/PollDetailPage/PollDetailPage.css
@@ -1,5 +1,7 @@
 .PollDetailPage .ui.header.sub.description {
   margin-bottom: 48px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .PollDetailPage > .stats {
